# rg_backup_0722

./: CMakeLists.txt  CONTRIBUTING.md  main.cpp  mousetrap.hpp  notes.md
.src/: angle.inl  camera.inl  circle_shape.inl  colors.inl  image.inl  include_gl.hpp  input_handler.inl  opengl_common.inl  polygon_shape.inl  rectangle_shape.inl  render_texture.inl  shader.inl  shape.inl  text.inl  texture.inl  time.inl  transform.inl  triangle_shape.inl  window.inl
include/: alignment.hpp  angle.hpp  camera.hpp  circle_shape.hpp  color_picker.hpp  colors.hpp  common.hpp  geometric_shapes.hpp  gl_canvas.hpp  gl_common.hpp  gtk_common.hpp  image.hpp  input_handler.hpp  keycodes.hpp  opengl_common.hpp  polygon_shape.hpp  rectangle_shape.hpp  render_target.hpp  render_texture.hpp  renderable.hpp  rng.hpp  shader.hpp  shader_area.hpp  shape.hpp  sprite.hpp  spritesheet.hpp  text.hpp  text_entry.hpp  texture.hpp  time.hpp  transform.hpp  triangle_shape.hpp  vector.hpp  window.hpp
include/color_picker/: color_component_entry.hpp  color_gradient_element.hpp  ~color_gradient_element.hpp
include/gtk/: gl_area.hpp
include/~color_picker/: color_html_code_entry.hpp
resources/shaders/: color_picker_hue_gradient.frag  hsv_selection_shape.frag  transparency_tiling.frag
~deprecated/~.src/: angle.inl  include_gl.hpp  input_handler.inl  opengl_common.inl  shader.inl  shape.inl  transform.inl  window.inl
~deprecated/~include/: colors.hpp  common.hpp  geometric_shapes.hpp  image.hpp  input_handler.hpp  keycodes.hpp  opengl_common.hpp  renderable.hpp  rng.hpp  shader.hpp  shape.hpp  spritesheet.hpp  text.hpp  time.hpp  transform.hpp  window.hpp
